trustfall_core/src/resources/test_data/parse_errors/root_vertex_property_field.parse-error.ron
Err(RootQueryPropertyField("Property field \"name\" on root query", Pos(line: 6, column: 5)))